--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,8 +27,67 @@
 					<a href="https://twitter.com/" class="ic vk-tw"></a>
 					<a href="ok.ru" class="ic vk-ok"></a>
 				</div>
+				<span>My language:</span>
+					<select class='switch-lang'>
+					<option value="1">Russian</option>
+					<option value="2">English</option>
+					<option value="3">Grech</option>
+					<option value="4">Turkish</option>
+					<option value="5">Spanish</option>
+				</select>
+
+				<div class="settings-section">
+					<div class="settings-title">
+						<h3 class="settings-section-title"><a href="#">My Settings</a></h3>
+					</div>
+					<div class="settings-slide">
+						<div class="settings-news">
+							<h4 class="news-title">News Sources</h4>
+							<div class="box">
+							<input type="checkbox" class="checkbox-settings" id="bbc">
+							<label for="bbc">BBC</label>
+							</div>
+							<div class="box">
+							<input type="checkbox" class="checkbox-settings" id="tech">
+							<label for="tech">TECHCRUNCH</label>
+							</div>
+							<div class="box">
+							<input type="checkbox" class="checkbox-settings" id="econom">
+							<label for="econom">Economist</label>
+							</div>
+							<div class="box">
+							<input type="checkbox" class="checkbox-settings" id="usatoday">
+							<label for="usatoday">USA Today</label>
+							</div>
+							<div class="box">
+							<input type="checkbox" class="checkbox-settings" id="forbes">
+							<label for="forbes">Forbes</label>
+							</div>
+							<div class="box">
+							<input type="checkbox" class="checkbox-settings" id="telegraph">
+							<label for="telegraph">Telegraph</label>
+							</div>
+
+						</div>
+						<div class="settings-lang-dif">
+							<h4>Languiage difficulty:</h4>
+							<div class="range-filter">
+								<div class="range-controls">
+									<div class="scale"><div class="bar"></div></div>
+									<input type="radio" id="slidedifficult1" name="check" class="checkbox-cust">
+									<label for="slidedifficult1" class="circle circle1"></label>
+									<input type="radio" id="slidedifficult2" name="check" class="checkbox-cust">
+									<label for="slidedifficult2" class="circle circle2"></label>
+									<input type="radio" id="slidedifficult3" name="check" class="checkbox-cust">
+									<label for="slidedifficult3" class="circle circle3"></label>
+									<span class="range-controls-hard">Hard</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
-			</div>
+		</div>
 
 
 			<div class="bottom-section">
@@ -45,60 +104,6 @@
 		</div>
 	</div>
 		<div class="middle-section clearfix">
-			<div class="settings-section clearfix">
-				<div class="settings-title">
-					<h3 class="settings-section-title"><a href="#">My Settings</a></h3>
-				</div>
-				<div class="settings-news">
-					<h4 class="news-title">News Sources</h4>
-					<div class="box">
-					<input type="checkbox" class="checkbox-settings" id="bbc">
-					<label for="bbc">BBC</label>
-					</div>
-					<div class="box">
-					<input type="checkbox" class="checkbox-settings" id="tech">
-					<label for="tech">TECHCRUNCH</label>
-					</div>
-					<div class="box">
-					<input type="checkbox" class="checkbox-settings" id="econom">
-					<label for="econom">Economist</label>
-					</div>
-					<div class="box">
-					<input type="checkbox" class="checkbox-settings" id="usatoday">
-					<label for="usatoday">USA Today</label>
-					</div>
-					<div class="box">
-					<input type="checkbox" class="checkbox-settings" id="forbes">
-					<label for="forbes">Forbes</label>
-					</div>
-					<div class="box">
-					<input type="checkbox" class="checkbox-settings" id="telegraph">
-					<label for="telegraph">Telegraph</label>
-					</div>
-
-				</div>
-				<div class="settings-lang-dif">
-					<h4>Languiage difficulty:</h4>
-					<div class="range-filter">
-						<div class="range-controls">
-							<div class="scale"><div class="bar"></div></div>
-							<input type="radio" id="slidedifficult1" name="check" class="checkbox-cust">
-							<label for="slidedifficult1" class="circle circle1"></label>
-							<input type="radio" id="slidedifficult2" name="check" class="checkbox-cust">
-							<label for="slidedifficult2" class="circle circle2"></label>
-							<input type="radio" id="slidedifficult3" name="check" class="checkbox-cust">
-							<label for="slidedifficult3" class="circle circle3"></label>
-							<span class="range-controls-hard">Hard</span>
-						</div>
-					</div>
-
-				</div>
-				<div class="settings-lang">
-					<h4><a href="#" class="settings-lang-link">Native language</a></h4>
-					<p class="lang">Russian</p>
-				</div>
-
-			</div>
 			<div class="center-content clearfix">
 			</div>
 
@@ -189,11 +194,14 @@
 			<div class="top-section-m clearfix">
 				<a href="#"><p class="upvoc">Upvoc</p></a>
 				<a href="#"><p class="login-m">Login</p></a>
-				<a href="#"><p class="my-lang">My Language: <select class='switch-lang'><option value="1">RUS</option>
-				<option value="2">ENG</option>
-				<option value="3">GRE</option>
-				<option value="4">TUR</option>
-				<option value="5">SPA</option></p></select></a>
+				<a href="#"><p class="my-lang">My Language: <select class='switch-lang'>
+					<option value="1">RUS</option>
+					<option value="2">ENG</option>
+					<option value="3">GRE</option>
+					<option value="4">TUR</option>
+					<option value="5">SPA</option>
+				</select>
+				</p></a>
 			</div>
 			<div class="bottom-section-m">
 				<ul>
