--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -350,12 +350,13 @@ p{
 	background: url('../img/box-arrows.png') no-repeat center;
 }
 .settings-section{
-	float: left;
-	width: 21%;
 	background: #F7F7F7;
-	margin-left: 10px;
-	margin-top: 20px;
 	position: relative;
+    display: inline-block;
+}
+.settings-slide {
+    background: #F7F7F7;
+    position: absolute;
 }
 .checkbox-settings{
 	display: none;
