--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,6 +36,7 @@
 					<option value="4">Turkish</option>
 					<option value="5">Spanish</option>
 				</select>
+				<div class="enter"></div>
 
 				<div class="settings-section">
 					<div class="settings-title">
