--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -165,6 +165,9 @@ p{
 .vk-ok{
 	background-position: -108px 0;
 }
+.enter {
+	display: none;
+}
 .register{
 	margin-left: 20px;
 	text-decoration: none;
