--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -106,6 +106,19 @@
 		</div>
 	</div>
 		<div class="middle-section clearfix">
+		<div class="top-line clearfix">
+				<div class="titlebox">
+					<h3 class="title-line">Tip of the Day:</h3>
+				</div>
+				<div class="allocation">
+					<p>Выделите слово и увидите его перевод</p>
+				</div>
+
+				<div class="showbtn"><input type="checkbox" class="checkbox" id="show">
+						<label for="show">Don’t show tips</label>
+						<div class="close" title="закрыть">Закрыть</div>
+				</div>
+			</div>
 			<div class="center-content clearfix">
 			</div>
 
