--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
 					<option value="5">Spanish</option>
 				</select>
 				<div class="enter"></div>
-
+				<div class="showsettings">Show my translations</div>
 				<div class="settings-section">
 					<div class="settings-title">
 						<h3 class="settings-section-title"><a href="#">My Settings</a></h3>
@@ -94,10 +94,10 @@
 
 			<div class="bottom-section">
 				<ul class="menu">
-					<li><a href="#">world</a></li>
-					<li><a href="#">sport</a></li>
-					<li><a href="#">technology</a></li>
-					<li><a href="#">entertainment</a></li>
+					<li><a href="#">World</a></li>
+					<li><a href="#">Sport</a></li>
+					<li><a href="#">Technology</a></li>
+					<li><a href="#">Entertainment</a></li>
 					<li><a href="#">style</a></li>
 					<li><a href="#">travel</a></li>
 				</ul>
@@ -264,7 +264,7 @@
 					<p class="word">Выделите слово и увидите его перевод</p>
 				</div>
 				<div class="close">123</div>
-            12312312312512312312512423413523413512344512545124e5615789563
+           
 
 
 		</div>
