--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
 					<option value="5">Spanish</option>
 				</select>
 				<div class="enter"></div>
-				<div class="showsettings">Show my translations</div>
+				<div class="showsettings"><span class="showspan">Show my translations</span></div>
 				<div class="settings-section">
 					<div class="settings-title">
 						<h3 class="settings-section-title"><a href="#">My Settings</a></h3>
