--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
 					<option value="2">English</option>
 					<option value="3">Grech</option>
 					<option value="4">Turkish</option>
-					<option value="5">Spanish</option>
+					<option value="5">Spanish</option>	
 				</select>
 				<div class="enter"></div>
 				<div class="showsettings"><span class="showspan">Show my translations</span></div>
@@ -90,7 +90,13 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="translate-window">
+			<h3 class="translate-window-title">word</h3>
+			<span class="translate-window-transcription">ˈsæləri]</span>
+			<span class="translate-window-translate">слово, речь</span>
+			<div class="translate-window-save"><span class="save-span">Save</span></div>
+			<div class="translate-window-close"><span class="close-span">Close</span></div>
+		</div>
 
 			<div class="bottom-section">
 				<ul class="menu">
