--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -1,7 +1,7 @@
 <div class="dict-title">
-    <h3><a href="#">MY DICTIONARIES</a></h3>
+    <h3><a href="#">My dictionaries</a></h3>
 </div>
-
+<div class="functions">
 <div class="left-col-func">
     <h5 class="left-title-save">Save words to</h5>
     <h5 class="left-title-auto">Autosave</h5>
@@ -9,14 +9,14 @@
     <h5 class="left-title-word">Highlight words:</h5>
 </div>
 <div class="right-col-func">
-    <select>
+    <select class='right-col-func-select-1'>
         <option>Main</option>
     </select>
     <div class="slider-check">
         <input type="checkbox" {{#if autosave}}checked="checked"{{/if}} value="autosave" id="slideTwo" name="autosave" class="autosave-slider checkbox-cust" />
         <label for="slideTwo"></label>
     </div>
-    <select>
+    <select class='right-col-func-select-2'>
         <option>Main</option>
     </select>
     <div class="slider-check2">
@@ -26,8 +26,9 @@
 
 
 </div>
-<div class="clearfix"></div>
 
+<div class="clearfix"></div>
+</div>
 <div class="sorting-block">
     <h5 class="sorting-block-title">Sort by:</h5>
     <p class="sortby">A-Z</p>
@@ -47,33 +48,5 @@
     <div class="transcription-f">
         <h5>transition [trænˈsɪʒən]</h5>
         <h5>переход, перевод</h5>
-    </div>
-    <div class="transcription-f">
-        <h5>transition [trænˈsɪʒən]</h5>
-        <h5>переход, перевод</h5>
-    </div>
-    <div class="transcription">
-        <h5>traditional [trəˈdɪʃənl]</h5>
-        <h5>традиционный</h5>
-    </div>
-    <div class="transcription">
-        <h5>cable [keɪbl]</h5>
-        <h5>кабель</h5>
-    </div>
-    <div class="transcription">
-        <h5>satellite [ˈsætəlaɪt]</h5>
-        <h5>спутник</h5>
-    </div>
-    <div class="transcription">
-        <h5>service [ˈsɜːvɪs]</h5>
-        <h5>сервис</h5>
-    </div>
-    <div class="transcription">
-        <h5>transition [trænˈsɪʒən]</h5>
-        <h5>переход, перевод</h5>
-    </div>
-    <div class="transcription">
-        <h5>traditional [trəˈdɪʃənl]</h5>
-        <h5>традиционный</h5>
     </div>
 </div>
