--- a/client/styles/media-queries.css
+++ b/client/styles/media-queries.css
@@ -8,7 +8,7 @@
     min-width: 320px;
     border-bottom: none;
   }
-  .settings-section, .soc-ic, .dictionaries-section, .soc-p{
+  .settings-section, .soc-ic, .soc-p{
     display: none !important;
   }
   
@@ -80,7 +80,7 @@
   .bottom-section {
     margin: 0 auto;
   }
-  .settings-section, .dictionaries-section, .logo-p{
+  .settings-section, .logo-p{
     display: none;
   }
   .enter {
@@ -236,7 +236,141 @@
   position: fixed;
   z-index: 1004;
   left: 54px;
+  display: none;
  }
+ .dictionaries-section {
+  position: fixed;
+  z-index: 1500;
+  left: 0%;
+  width: 375px;
+  height: 100%;
+  bottom: 0%;
+  background: white;
+}
+.dict-title h3:before {
+  display: none;
+}
+.dict-title h3:after {
+  display: none;
+}
+.dict-title h3 a {
+  font: 14px 'Helvetica-Bold', sans-serif;
+  text-transform: none;
+  text-decoration: none;
+  color: black;
+  padding-left: 20px;
+}
+.dict-title h3 {
+  background: white;
+  width: 100%;
+  margin: 0;
+  position: relative;
+}
+.dict-title h3 a:after {
+  content: '';
+  width: 20px;
+  height: 20px;
+
+  background: url('../img/close.png') no-repeat;
+  position: absolute;
+  top: 8px;
+  left: 90%;
+}
+.dict-title:after {
+  display: none;
+}
+.left-title-save, .right-col-func-select-1, .left-title-show, .right-col-func-select-2 {
+  display: none;
+}
+.slider-check2 {
+  margin-top: 15px;
+  position: relative;
+  left: 35px;
+}
+.left-title-auto {
+  display: inline-block;
+  margin: 0;
+  font: 14px 'Helvetica', sans-serif;
+  color: black;
+}
+.left-title-word {
+  display: inline-block;
+  margin: 0;
+   font: 14px 'Helvetica', sans-serif;
+   color: black;
+   position: relative;
+   left: 130px;
+}
+.slider-check {
+  display: inline-block;
+  position: relative;
+  right: 140px;
+  top: 1px;
+}
+.slider-check2 {
+  display: inline-block;
+  margin-top: 1px;
+
+}
+.left-col-func {
+  width: 160px;
+  margin-top: 5px;
+}
+.right-col-func {
+  margin-right: 40px;
+ margin-bottom: 2px;
+ margin-top: 5px;
+}
+.functions {
+  margin-top: 1px;
+  background: #f6f6f6;
+}
+.sorting-block {
+  background: #eeeeee;
+  width: 100%;
+  margin: 0;
+  margin-top: 1px;
+  border: none;
+}
+.sorting-block-title {
+  margin-left: 20px;
+}
+
+.dictionaries-section:after {
+  content: 'Edit list';
+  width: 100%;
+  height: 30px;
+  position: absolute;
+  bottom: 0%;
+  background: #7c1216;
+  color: white;
+  padding-left: 45%;
+  padding-top: 10px;
+  font: 14px 'Helvetica', sans-serif;
+}
+.dictionary:last-child {
+  border-bottom: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
