functions block for 375px devs

--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -30,23 +30,25 @@
 <div class="clearfix"></div>
 </div>
 <div class="sorting-block">
-    <h5 class="sorting-block-title">Sort by:</h5>
-    <p class="sortby">A-Z</p>
+    <h3 class="sorting-block-title">Sort by:</h3>
+    <select>
+    <option><p class="sortby">A-Z</p></option>
 
-    <p class="time">Time added</p>
+    <option><p class="time">Time added</p></option>
+    </select>
 </div>
 <div class="clearfix"></div>
 <div class="dictionary">
     <div class="transcription-f">
-        <h5>transition [trænˈsɪʒən]</h5>
+        <h5><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></h5>
         <h5>переход, перевод</h5>
     </div>
     <div class="transcription-f">
-        <h5>transition [trænˈsɪʒən]</h5>
+        <h5><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></h5>
         <h5>переход, перевод</h5>
     </div>
     <div class="transcription-f">
-        <h5>transition [trænˈsɪʒən]</h5>
+        <h5><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></h5>
         <h5>переход, перевод</h5>
     </div>
 </div>
