--- a/client/styles/media-queries.css
+++ b/client/styles/media-queries.css
@@ -305,12 +305,79 @@
   display: inline-block;
   position: relative;
   right: 140px;
-  top: 1px;
+  width: 40px;
+  height: 18px;
+  background: white;
+  border: 1px solid #808080;
+  box-shadow: none;
+  bottom: 1px;
 }
 .slider-check2 {
   display: inline-block;
-  margin-top: 1px;
+  width: 40px;
+  height: 18px;
+  background: white;
+   border: 1px solid #808080;
+   box-shadow: none;
+   left: 50px;
+   bottom: 1px;
+   margin-top: 0;
+}
+.sorting-block-title, .sortby, .time {
+  color: black;
+  font: 14px 'Helvetica-Med', sans-serif;
+}
+.slider-check label:after {
+  display: none;
+}
+.slider-check2 label:after {
+  display: none;
+}
+.slider-check:after {
+  display: none;
+}
+.slider-check label {
+  width: 18px;
+  height: 18px;
+  box-shadow: none;
+  background: #eeeeee;
+   border: 1px solid #808080;
+   top: -1px;
+   left: -1px;
+}
+.slider-check2 label {
+  width: 18px;
+  height: 18px;
+  box-shadow: none;
+  background: #eeeeee;
+  border: 1px solid #808080;
+   top: -1px;
+   left: -1px;
+}
+.slider-check input[type=checkbox]:checked + label {
+  left: 24px;
+}
+.slider-check input[type=checkbox]:checked + label {
+  border: 1px solid #7cc331;
+  box-shadow: 0 0 3px rgba(0,0,0,0.5);
+}
+.slider-check input[type=checkbox]:checked .slider-check {
+  background: #7cc331;
 
+}
+.slider-check2 input[type=checkbox]:checked + label {
+  left: 24px;
+}
+.slider-check2 input[type=checkbox]:checked + label {
+  border: 1px solid #7cc331;
+  box-shadow: 0 0 3px rgba(0,0,0,0.5);
+}
+.slider-check2 input[type=checkbox]:checked .slider-check {
+  background: #7cc331;
+
+}
+.slider-check2:after {
+  display: none;
 }
 .left-col-func {
   width: 160px;
@@ -334,8 +401,18 @@
 }
 .sorting-block-title {
   margin-left: 20px;
+  margin-top: 0;
+  padding-top: 0;
+  margin-top: 8px;
 }
+.sorting-block select {
+  background: #eeeeee;
+  border: none;
+  margin-left: 30px;
+  width: 40px;
+  margin-top: 8px;
 
+}
 .dictionaries-section:after {
   content: 'Edit list';
   width: 100%;
@@ -351,7 +428,47 @@
 .dictionary:last-child {
   border-bottom: none;
 }
-
+.transcription-f h5 {
+  display: inline-block;
+  font-size: 14px;
+  margin: 0;
+}
+.transcription-f {
+  margin-left: 0;
+  color: black;
+  font: 14px 'Helvetica', sans-serif;
+}
+.transition-word {
+  font: 14px 'Helvetica-Bold', sans-serif;
+  color: black;
+}
+.transcription-word {
+  font: 14px 'Helvetica', sans-serif;
+  color: #808080;
+  margin-right: 20px;
+  position: relative;
+}
+.transcription-word:after {
+  content: '';
+  height: 1px;
+  width: 8px;
+  position: absolute;
+  background: black;
+  top: 9px;
+  left: 82px;
+}
+.sortby:after {
+  top: 16px;
+  left: 27px;
+}
+.time:after {
+  left: 81px;
+  top: 16px;
+  right: 90px;
+}
+.time {
+  right: 60px;
+}
 
 
 
