--- a/client/styles/media-queries.css
+++ b/client/styles/media-queries.css
@@ -509,7 +509,7 @@
     height: 51px;
     border: none;
   }
-  .settings-section, .dictionaries-section, .logo-p{
+  .settings-section, .logo-p{
     display: none;
   }
   .header .top-section {
@@ -691,5 +691,242 @@
   z-index: 1004;
   left: 27px;
  }
+ .dictionaries-section {
+  position: fixed;
+  z-index: 1500;
+  left: 0%;
+  width: 320px;
+  height: 100%;
+  bottom: 0%;
+  background: white;
+}
+.dict-title h3:before {
+  display: none;
+}
+.dict-title h3:after {
+  display: none;
+}
+.dict-title h3 a {
+  font: 14px 'Helvetica-Bold', sans-serif;
+  text-transform: none;
+  text-decoration: none;
+  color: black;
+  padding-left: 20px;
+}
+.dict-title h3 {
+  background: white;
+  width: 100%;
+  margin: 0;
+  position: relative;
+}
+.dict-title h3 a:after {
+  content: '';
+  width: 20px;
+  height: 20px;
+
+  background: url('../img/close.png') no-repeat;
+  position: absolute;
+  top: 8px;
+  left: 90%;
+}
+.dict-title:after {
+  display: none;
+}
+.left-title-save, .right-col-func-select-1, .left-title-show, .right-col-func-select-2 {
+  display: none;
+}
+.slider-check2 {
+  margin-top: 15px;
+  position: relative;
+  left: 35px;
+}
+.left-title-auto {
+  display: inline-block;
+  margin: 0;
+  font: 14px 'Helvetica', sans-serif;
+  color: black;
+}
+.left-title-word {
+  display: inline-block;
+  margin: 0;
+   font: 14px 'Helvetica', sans-serif;
+   color: black;
+   position: relative;
+   left: 150px;
+   bottom: 16px;
+   
+}
+.slider-check {
+  display: inline-block;
+  position: relative;
+  right: 110px;
+  width: 40px;
+  height: 18px;
+  background: white;
+  border: 1px solid #808080;
+  box-shadow: none;
+  right: 100px;
+  bottom: 1px;
+}
+.slider-check2 {
+  display: inline-block;
+  width: 40px;
+  height: 18px;
+  background: white;
+   border: 1px solid #808080;
+   box-shadow: none;
+   left: 50px;
+   bottom: 1px;
+   margin-top: 0;
+}
+.sorting-block-title, .sortby, .time {
+  color: black;
+  font: 14px 'Helvetica-Med', sans-serif;
+}
+.slider-check label:after {
+  display: none;
+}
+.slider-check2 label:after {
+  display: none;
+}
+.slider-check:after {
+  display: none;
+}
+.slider-check label {
+  width: 18px;
+  height: 18px;
+  box-shadow: none;
+  background: #eeeeee;
+   border: 1px solid #808080;
+   top: -1px;
+   left: -1px;
+}
+.slider-check2 label {
+  width: 18px;
+  height: 18px;
+  box-shadow: none;
+  background: #eeeeee;
+  border: 1px solid #808080;
+   top: -1px;
+   left: -1px;
+}
+.slider-check input[type=checkbox]:checked + label {
+  left: 24px;
+}
+.slider-check input[type=checkbox]:checked + label {
+  border: 1px solid #7cc331;
+  box-shadow: 0 0 3px rgba(0,0,0,0.5);
+}
+.slider-check input[type=checkbox]:checked .slider-check {
+  background: #7cc331;
+
+}
+.slider-check2 input[type=checkbox]:checked + label {
+  left: 24px;
+}
+.slider-check2 input[type=checkbox]:checked + label {
+  border: 1px solid #7cc331;
+  box-shadow: 0 0 3px rgba(0,0,0,0.5);
+}
+.slider-check2 input[type=checkbox]:checked .slider-check {
+  background: #7cc331;
+
+}
+.slider-check2:after {
+  display: none;
+}
+.left-col-func {
+  width: 100px;
+  margin-top: 5px;
+}
+.right-col-func {
+ margin-bottom: 2px;
+ margin-top: 5px;
+ margin-right: 42px;
+}
+.functions {
+  margin-top: 1px;
+  background: #f6f6f6;
+}
+.sorting-block {
+  background: #eeeeee;
+  width: 100%;
+  margin: 0;
+  margin-top: 1px;
+  border: none;
+}
+.sorting-block-title {
+  margin-left: 20px;
+  margin-top: 0;
+  padding-top: 0;
+  margin-top: 8px;
+}
+.sorting-block select {
+  background: #eeeeee;
+  border: none;
+  margin-left: 30px;
+  width: 40px;
+  margin-top: 8px;
+
+}
+.dictionaries-section:after {
+  content: 'Edit list';
+  width: 100%;
+  height: 30px;
+  position: absolute;
+  bottom: 0%;
+  background: #7c1216;
+  color: white;
+  padding-left: 45%;
+  padding-top: 10px;
+  font: 14px 'Helvetica', sans-serif;
+}
+.dictionary:last-child {
+  border-bottom: none;
+}
+.transcription-f h5 {
+  display: inline-block;
+  font-size: 14px;
+  margin: 0;
+}
+.transcription-f {
+  margin-left: 0;
+  color: black;
+  font: 14px 'Helvetica', sans-serif;
+  width: 320px;
+}
+.transition-word {
+  font: 14px 'Helvetica-Bold', sans-serif;
+  color: black;
+}
+.transcription-word {
+  font: 14px 'Helvetica', sans-serif;
+  color: #808080;
+  margin-right: 20px;
+  position: relative;
+}
+.transcription-word:after {
+  content: '';
+  height: 1px;
+  width: 8px;
+  position: absolute;
+  background: black;
+  top: 9px;
+  left: 82px;
+}
+.sortby:after {
+  top: 16px;
+  left: 27px;
+}
+.time:after {
+  left: 81px;
+  top: 16px;
+  right: 90px;
+}
+.time {
+  right: 60px;
+}
+
+
 
 }
